packages/kit/test/apps/basics/src/routes/errors/load-error-server/layout-data/+page.js
import { error } from '@sveltejs/kit';

/** @type {import('@sveltejs/kit').Load} */
export async function load() {
	error(404, 'Not found');
}
